# SocialMedia-FastAPI

./: README.md  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schema.py  utils.py
app/routers/: auth.py  posts.py  users.py  votes.py
